# llm_agent_evolution_2

./: README.md  direct_run.py  evolution_demo.py  evolve.sh  main.py  plan.md  pyproject.toml  pytest.ini  quick_test.py  requirements.txt  run.py  run_streamlit.sh  run_with_dspy.py  setup.cfg  spec.md  standalone_optimizer.py  streamlit_control.py  streamlit_dashboard.py  tasks.md  test_llm_adapter_script.py  universal_optimize.py  universal_optimize_README.md  visualization_cli.py
examples/: count_a.py  optimize_writing.py  simple_count_a.py  test_code.py
src/llm_agent_evolution/: __init__.py  __main__.py  application.py  cli.py  evolution.py  evolution_demo.py  quick_test.py  standalone.py  universal_optimize.py  universal_optimizer_core.py
src/llm_agent_evolution/adapters/primary/: __init__.py  cli.py
src/llm_agent_evolution/adapters/secondary/: __init__.py  llm.py  logging.py  mock_llm.py  script_evaluator.py  statistics.py  visualization.py
src/llm_agent_evolution/domain/: __init__.py  model.py  services.py
src/llm_agent_evolution/ports/: __init__.py  primary.py  secondary.py
src/llm_agent_evolution/ports/secondary/: script_evaluator.py
tests/: test_agent_loading.py  test_basic.py  test_cli.py  test_command_evaluation.py  test_domain.py  test_end_to_end.py  test_integration.py  test_llm_adapter.py  test_llm_adapter_direct.py  test_mock_llm.py  test_script_evaluator.py  test_simplified.py  test_standalone.py  test_statistics.py  test_stdin_optimization.py
