[metadata]
name = llm-agent-evolution
version = 0.1.0
author = Your Name
author_email = your.email@example.com
description = Evolution framework for LLM agents
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/llm_agent_evolution
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = 
    = src
packages = find:
python_requires = >=3.8
install_requires =
    numpy>=1.21

[options.extras_require]
test =
    pytest>=6.0
